# algos

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  DEBUG.md  README.md  VISION.md  deny.toml
.cursor/rules/: algos-rules.mdc
.github/workflows/: ci.yml  release.yml
benches/cs/sort/: heapsort_benchmarks.rs  quicksort_benchmarks.rs  sorting_benchmarks.rs
benches/cs/string/: suffix_array.rs
coverage/: tarpaulin-report.html
docs/: architecture.md
docs/adr/: 0000-template.md  0001-target-use-cases.md  0002-compute-backend.md  0003-trait-interface-design.md  0004-algorithm-delivery-waves.md  0005-wave-two-algorithm-selection.md  0006-llm-rl-wave-three.md  0007-conversation-surface-hardening.md
src/: cs.rs  error.rs  lib.rs  math.rs  ml.rs
src/cs/: approx.rs  combinatorial.rs  compression.rs  dynamic.rs  ecc.rs  error.rs  graph.rs  hashing.rs  optimization.rs  randomized.rs  security.rs
src/cs/approx/: christofides.rs  fptas.rs  geomans_williamson.rs  greed_set_cover.rs  johnsons_max_sat.rs  local_ratio.rs  lp_rounding.rs  primal_dual_approx.rs  ptas_knapsack.rs  vertex_cover_two.rs
src/cs/combinatorial/: backtracking.rs  dancing_links.rs  gray_code.rs  held_karp.rs  johnson_trotter.rs  subset_gen.rs  zassenhaus.rs
src/cs/compression/: arithmetic.rs  bwt.rs  deflate.rs  huffman.rs  lz77.rs  lz78.rs  lzma.rs  lzw.rs  ppm.rs  rans.rs
src/cs/dynamic/: bellman_equation.rs  coin_change.rs  edit_distance.rs  kadane.rs  knuth_optimization.rs  longest_common_subsequence.rs  longest_increasing_subsequence.rs  matrix_chain.rs  viterbi.rs  weighted_interval.rs
src/cs/ecc/: bch.rs  convolutional.rs  crc.rs  fountain.rs  hamming.rs  ldpc.rs  polar.rs  reed_solomon.rs  turbo.rs
src/cs/graph/: bellman_ford.rs  bron_kerbosch.rs  dijkstra.rs  dinic.rs  edmond_karp.rs  edmonds_blossom.rs  euler_tour.rs  floyd_cycle.rs  floyd_warshall.rs  ford_fulkerson.rs  hamiltonian.rs  held_karp.rs  hierholzer.rs  hopcroft_karp.rs  hungarian.rs  johnson.rs  johnson_cycle.rs  kadane.rs  karger.rs  kosaraju.rs  kruskal.rs  prim.rs  randomized_delaunay.rs  randomized_kruskal.rs  randomized_prim.rs  tarjan.rs  topological_sort.rs  warshall.rs
src/cs/hashing/: crc32.rs  cuckoo.rs  fnv.rs  jenkins.rs  murmurhash.rs  open_addressing.rs  perfect.rs  polynomial_rolling.rs  separate.rs  universal.rs
src/cs/optimization/: bfgs.rs  conjugate_gradient.rs  genetic.rs  gradient_descent.rs  interior_point.rs  lbfgs.rs  nelder_mead.rs  newton.rs  simplex.rs  simulated_annealing.rs
src/cs/randomized/: randomized_bfs_2sat.rs  reservoir_sampling.rs  skip_list.rs
src/cs/search/: bfs.rs  binary.rs  dfs.rs  exponential.rs  fibonacci.rs  interpolation.rs  jump.rs  linear.rs  sublist.rs  ternary.rs
src/cs/security/: aes.rs  blowfish.rs  diffie_hellman.rs  dsa.rs  elgamal.rs  elliptic.rs  md5.rs  rsa.rs  sha256.rs  twofish.rs
src/cs/sort/: bucketsort.rs  heapsort.rs  insertionsort.rs  mergesort.rs  quicksort.rs  radixsort.rs  randomized_quickselect.rs  randomized_quicksort.rs  selectionsort.rs  shellsort.rs
src/cs/string/: aho_corasick.rs  kmp.rs  manacher.rs  rabin_karp.rs  rolling_hash.rs  suffix_array.rs  suffix_automaton.rs  suffix_tree.rs  z_algorithm.rs
src/math/: integer_linear.rs  monte_carlo.rs
src/math/integer_linear/: benders.rs  branch_and_bound.rs  branch_and_cut.rs  branch_and_price.rs  branch_and_reduce.rs  column_generation.rs  dantzig_wolfe.rs  gomory.rs  lift_and_project.rs  mixed_integer_rounding.rs  tests.rs
src/math/monte_carlo/: monte_carlo_integration.rs
src/math/optimization/: bfgs.rs  conjugate_gradient.rs  genetic.rs  gradient_descent.rs  interior_point.rs  lbfgs.rs  nelder_mead.rs  newton.rs  simplex.rs  simulated_annealing.rs
src/ml/: classic.rs  deep.rs  rl.rs
src/ml/classic/: svm.rs  (+8 more)
src/rl/: env.rs  mod.rs  policy.rs  value.rs
(+39 files in other folders)
