[package]
name = "algos"
version = "0.7.0"
authors = ["Brad-Edwards <j.bradley.edwards@gmail.com>"]
description = "Reinforcement learning algorithms in Rust — tabular, deep, and planning methods with composable trait interfaces"
repository = "https://github.com/Brad-Edwards/algos"
homepage = "https://crates.io/crates/algos"
documentation = "https://docs.rs/algos"
license-file = "LICENSE"
readme = "README.md"
keywords = ["reinforcement-learning", "rl", "machine-learning", "algorithm", "ai"]
categories = ["algorithms", "science"]
exclude = ["/.github/*"]
edition = "2021"

[dependencies]
thiserror = "2.0.12"
ndarray = "0.16.1"
rand = "0.8.5"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true
